--- a/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
+++ b/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
@@ -21,28 +21,26 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <ng-container *ngIf="bbmode === 1">
-        <div>
-          <button (click)="doNav(1)" class="toolbutton">
-            <i class="fa fa-file" aria-hidden="true"></i>
-          </button>
-          <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
-            <i class="fa fa-minus" aria-hidden="true"></i>
-          </button>
-          <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
-            <i class="fa fa-edit" aria-hidden="true"></i>
-          </button>
-          <button (click)="doNav(8)" class="toolbutton" [disabled]="csakProjekt">
-            Korábbi projektek
-          </button>
-          <button (click)="doNav(100)" class="toolbutton" [disabled]="csakProjekt">
-            Projekthez rendelés
-          </button>
-          <button (click)="doNav(100)" class="toolbutton">
-            Zárás/nyitás
-          </button>
-        </div>
-      </ng-container>
+      <div class="tabla-toolbar">
+        <button (click)="doNav(1)" class="toolbutton">
+          <i class="fa fa-file" aria-hidden="true"></i>
+        </button>
+        <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+          <i class="fa fa-minus" aria-hidden="true"></i>
+        </button>
+        <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
+          <i class="fa fa-edit" aria-hidden="true"></i>
+        </button>
+        <button (click)="doNav(8)" class="toolbutton" [disabled]="csakProjekt">
+          Korábbi projektek
+        </button>
+        <button (click)="doNav(100)" class="toolbutton" [disabled]="csakProjekt">
+          Projekthez rendelés
+        </button>
+        <button (click)="doNav(100)" class="toolbutton">
+          Zárás/nyitás
+        </button>
+      </div>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
