--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -1,34 +1,32 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
-  <ng-container *ngIf="bbmode === 1">
-    <div>
-      <button (click)="doNav(1)" class="toolbutton">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
-      </button>
+  <div class="tabla-toolbar">
+    <button (click)="doNav(1)" class="toolbutton">
+      <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
+    </button>
 
-      <button [disabled]="!jog || !enTorles"
-              (click)="doNav(2)" class="toolbutton">
-        <i class="fa fa-minus" aria-hidden="true"></i>
-      </button>
-      <button [disabled]="!jog"
-              (click)="doNav(3)" class="toolbutton">
-        <i class="fa fa-edit" aria-hidden="true"></i>
-      </button>
+    <button [disabled]="!jog || !enTorles"
+            (click)="doNav(2)" class="toolbutton">
+      <i class="fa fa-minus" aria-hidden="true"></i>
+    </button>
+    <button [disabled]="!jog"
+            (click)="doNav(3)" class="toolbutton">
+      <i class="fa fa-edit" aria-hidden="true"></i>
+    </button>
 
-      <button (click)="doNav(15)" class="toolbutton">
-        Dokumentum
-      </button>
-      <button (click)="doNav(16)" class="toolbutton">
-        Fotózás link
-      </button>
-      <button [disabled]="!enProjekt" (click)="doNav(8)" class="toolbutton">
-        Projekt
-      </button>
-      <button (click)="doNav(41)" class="toolbutton">
-        <i class="fa fa-angle-right" style="margin-right: 3px" aria-hidden="true"></i>
-        Vágólapra
-      </button>
-    </div>
-  </ng-container>
+    <button (click)="doNav(15)" class="toolbutton">
+      Dokumentum
+    </button>
+    <button (click)="doNav(16)" class="toolbutton">
+      Fotózás link
+    </button>
+    <button [disabled]="!enProjekt" (click)="doNav(8)" class="toolbutton">
+      Projekt
+    </button>
+    <button (click)="doNav(41)" class="toolbutton">
+      <i class="fa fa-angle-right" style="margin-right: 3px" aria-hidden="true"></i>
+      Vágólapra
+    </button>
+  </div>
 
   <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
