--- a/src/app/primitiv/felhasznalo/felhasznalo-list/felhasznalo-list.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-list/felhasznalo-list.component.html
@@ -26,26 +26,24 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <ng-container *ngIf="bbmode === 1">
-        <div>
-            <button (click)="doNav(1)" class="toolbutton">
-              <i class="fa fa-file" aria-hidden="true"></i>
-            </button>
-            <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
-              <i class="fa fa-minus" aria-hidden="true"></i>
-            </button>
-            <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            </button>
+      <div class="tabla-toolbar">
+        <button (click)="doNav(1)" class="toolbutton">
+          <i class="fa fa-file" aria-hidden="true"></i>
+        </button>
+        <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+          <i class="fa fa-minus" aria-hidden="true"></i>
+        </button>
+        <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
+          <i class="fa fa-edit" aria-hidden="true"></i>
+        </button>
 
-            <button [disabled]="!jog" (click)="doNav(4)" class="toolbutton">
-              Jelszó
-            </button>
-            <button [disabled]="!jog" (click)="doNav(5)" class="toolbutton">
-              Tevékenység
-            </button>
-        </div>
-      </ng-container>
+        <button [disabled]="!jog" (click)="doNav(4)" class="toolbutton">
+          Jelszó
+        </button>
+        <button [disabled]="!jog" (click)="doNav(5)" class="toolbutton">
+          Tevékenység
+        </button>
+      </div>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
