--- a/src/app/primitiv/me/me-list/me-list.component.html
+++ b/src/app/primitiv/me/me-list/me-list.component.html
@@ -26,19 +26,17 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <ng-container *ngIf="bbmode === 1">
-        <div>
-            <button (click)="doNav(1)" class="toolbutton">
-              <i class="fa fa-file" aria-hidden="true"></i>
-            </button>
-            <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
-              <i class="fa fa-minus" aria-hidden="true"></i>
-            </button>
-            <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            </button>
-        </div>
-      </ng-container>
+      <div class="tabla-toolbar">
+        <button (click)="doNav(1)" class="toolbutton">
+          <i class="fa fa-file" aria-hidden="true"></i>
+        </button>
+        <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+          <i class="fa fa-minus" aria-hidden="true"></i>
+        </button>
+        <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
+          <i class="fa fa-edit" aria-hidden="true"></i>
+        </button>
+      </div>
 
       <!--  export enum MeEgyMode {
       Reszletek = 1,
