--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{projektkapcsolatservice.cim}}</h5>
 
-  <div>
+  <div class="tabla-toolbar">
     <button (click)="onKereses()" class="toolbutton">
       <i class="fa fa-search" aria-hidden="true"></i>
     </button>
@@ -38,7 +38,6 @@
                        [bizonylatLeiro]="bizonylatLeiro"
                        [enTorles]="false"
                        [enProjekt]="false"
-                       [(bbmode)]="egybizonylat_bbmode"
                        [(egymode)]="egybizonylat_egymode">
     </app-bizonylat-egy>
   </ng-template>
@@ -48,7 +47,6 @@
                   [enTorles]="false"
                   [enProjekt]="false"
                   [enUgyfel]="false"
-                  [(bbmode)]="egyirat_bbmode"
                   [(egymode)]="egyirat_egymode"
                   (eventSzerkesztesutan)="onIratSzerkesztesutan($event)">
     </app-irat-egy>
