--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -148,7 +148,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 44">
         <div [@rowanimation]>
-          <app-hibabejelentes-list [csakProjekt]="true" [Projektkod]="Dto[DtoSelectedIndex].Projektkod">
+          <app-hibabejelentes-list [ProjektBol]="true" [ProjektDto]="Dto[DtoSelectedIndex]">
           </app-hibabejelentes-list>
         </div>
       </ng-container>
