--- a/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
+++ b/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
@@ -9,13 +9,16 @@
              [items]="Dto"
              [colsets]="hibabejelentesservice.GridSettings"
              (forid)="onId($event)"
+             [ujTemplate]="griduj"
              [egyTemplate]="gridegy"
              [megjegyzesIs]="true">
   </app-tabla>
 
   <ng-template #griduj>
     <app-hibabejelentes-szerkesztes [uj] = "true"
-                                  (eventSzerkeszteskesz)="onUjtetelkesz($event)">
+                                    [ProjektBol]="ProjektBol"
+                                    [ProjektDto]="ProjektDto"
+                                    (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-hibabejelentes-szerkesztes>
   </ng-template>
 
@@ -25,19 +28,19 @@
         <button (click)="doNav(1)" class="toolbutton">
           <i class="fa fa-file" aria-hidden="true"></i>
         </button>
-        <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+        <button [disabled]="true" (click)="doNav(2)" class="toolbutton">
           <i class="fa fa-minus" aria-hidden="true"></i>
         </button>
         <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
           <i class="fa fa-edit" aria-hidden="true"></i>
         </button>
-        <button (click)="doNav(8)" class="toolbutton" [disabled]="csakProjekt">
-          Korábbi projektek
+        <button [disabled]="ProjektBol" (click)="doNav(8)" class="toolbutton">
+          Projektek email alapján
         </button>
-        <button (click)="doNav(100)" class="toolbutton" [disabled]="csakProjekt">
+        <button [disabled]="ProjektBol" (click)="doNav(62)" class="toolbutton">
           Projekthez rendelés
         </button>
-        <button (click)="doNav(100)" class="toolbutton">
+        <button [disabled]="!jog" (click)="zarasnyitas()" class="toolbutton">
           Zárás/nyitás
         </button>
       </div>
@@ -50,11 +53,33 @@
           </app-reszletek>
         </div>
       </ng-container>
-
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="hibabejelentesservice.cim"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-hibabejelentes-szerkesztes [uj] = "false"
+                                          [ProjektBol]="ProjektBol"
+                                          [ProjektDto]="ProjektDto"
+                                          [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                          (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-hibabejelentes-szerkesztes>
+        </div>
+      </ng-container>
       <ng-container *ngIf="egymode === 8">
         <div [@rowanimation]>
-          <app-ajanlatkeres-projekt [Email]="Dto[DtoSelectedIndex].Email">
-          </app-ajanlatkeres-projekt>
+          <app-projekt-emailalapjan [Email]="Dto[DtoSelectedIndex].Email">
+          </app-projekt-emailalapjan>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 62">
+        <div [@rowanimation]>
+          <app-projekthez-rendeles (Szerkeszteskesz)="onProjekthezRendeles($event)">
+          </app-projekthez-rendeles>
         </div>
       </ng-container>
     </div>
