--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -142,7 +142,7 @@
 
       <ng-container *ngIf="egymode === 43">
         <div [@rowanimation]>
-          <app-felmeres-list [csakProjekt]="true" [Projektkod]="Dto[DtoSelectedIndex].Projektkod">
+          <app-felmeres-list [ProjektBol]="true" [ProjektDto]="Dto[DtoSelectedIndex]">
           </app-felmeres-list>
         </div>
       </ng-container>
