--- a/src/app/felmeres/felmeres-list/felmeres-list.component.html
+++ b/src/app/felmeres/felmeres-list/felmeres-list.component.html
@@ -2,7 +2,7 @@
   <h5>{{felmeresservice.cim}}</h5>
   <app-toolbar [StatuszSzurok]="statuszszurok" [(statusz)]="statusz" [visStatusz]="true"
                [Szurok]="szurok" [(szempont)]="szempont" [(minta)]="minta" (Kereses)="onKereses()"
-               [visUj]="true" [enUj]="jog" (Uj)="doUjtetel()">
+               [visUj]="true" [enUj]="jog && ProjektBol" (Uj)="doUjtetel()">
   </app-toolbar>
 
   <app-tabla #tabla
@@ -28,34 +28,31 @@
         <button (click)="doNav(1)" class="toolbutton">
           <i class="fa fa-file" aria-hidden="true"></i>
         </button>
-        <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+        <button [disabled]="!jog || !ProjektBol || !Dto[DtoSelectedIndex].Nyitott" (click)="doNav(2)" class="toolbutton">
           <i class="fa fa-minus" aria-hidden="true"></i>
         </button>
-        <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
+        <button [disabled]="!jog || !ProjektBol || !Dto[DtoSelectedIndex].Nyitott" (click)="doNav(3)" class="toolbutton">
           <i class="fa fa-edit" aria-hidden="true"></i>
         </button>
-        <button [disabled]="ProjektBol" (click)="doNav(8)" class="toolbutton">
-          Projektek email alapján
+        <button [disabled]="!jog" class="toolbutton">
+          Dokumentumok
         </button>
-        <button [disabled]="ProjektBol" (click)="doNav(62)" class="toolbutton">
-          Projekthez rendelés
-        </button>
-        <button [disabled]="!jog" (click)="zarasnyitas()" class="toolbutton">
-          Zárás/nyitás
+        <button [disabled]="!jog || ProjektBol" (click)="zarasnyitas()" class="toolbutton">
+          {{Dto[DtoSelectedIndex].Nyitott ? 'Jelentés és zárás' : 'Újranyitás'}}
         </button>
       </div>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
-          <app-reszletek [cim]="ajanlatkeresservice.cim"
+          <app-reszletek [cim]="felmeresservice.cim"
                          [item]="Dto[DtoSelectedIndex]"
-                         [colsets]="ajanlatkeresservice.ReszletekSettings">
+                         [colsets]="felmeresservice.ReszletekSettings">
           </app-reszletek>
         </div>
       </ng-container>
       <ng-container *ngIf="egymode === 2">
         <div [@rowanimation]>
-          <app-tetel-torles [cim]="ajanlatkeresservice.cim"
+          <app-tetel-torles [cim]="felmeresservice.cim"
                             (eventTorles)="onTorles($event)">
           </app-tetel-torles>
         </div>
@@ -70,11 +67,10 @@
           </app-felmeres-szerkesztes>
         </div>
       </ng-container>
-
-      <ng-container *ngIf="egymode === 8">
+      <ng-container *ngIf="egymode === 45">
         <div [@rowanimation]>
-          <app-ajanlatkeres-projekt [Email]="Dto[DtoSelectedIndex].Email">
-          </app-ajanlatkeres-projekt>
+          <app-egyszeru-uzenet [uzenet]="uzenet">
+          </app-egyszeru-uzenet>
         </div>
       </ng-container>
     </div>
