--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -3,7 +3,7 @@
   <button (click)="onKereses()" class="toolbutton">
     <i class="fa fa-search" aria-hidden="true"></i>
   </button>
-  <button (click)="doUjtetel()" class="toolbutton">
+  <button [disabled]="!mod" (click)="doUjtetel()" class="toolbutton">
     <i class="fa fa-plus" aria-hidden="true"></i>
   </button>
 
@@ -31,7 +31,7 @@
           <button (click)="doNav(1)" class="toolbutton">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
-          <button (click)="doNav(2)" class="toolbutton">
+          <button [disabled]="!mod" (click)="doNav(2)" class="toolbutton">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
 
