--- a/src/app/hibabejelentes/hibabejelentes-szerkesztes/hibabejelentes-szerkesztes.component.html
+++ b/src/app/hibabejelentes/hibabejelentes-szerkesztes/hibabejelentes-szerkesztes.component.html
@@ -4,26 +4,39 @@
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
-    <div class="editform-row">
-      <div class="editform-label">Név</div>
-      <input type="text" class="editform-edit ugyfelwidth" appAutofocus formControlName="nev">
-    </div>
-    <div class="editform-row">
-      <div class="editform-label">Telepítési cím</div>
-      <input type="text" class="editform-edit cimwidth" formControlName="cim">
-    </div>
-    <div class="editform-row">
-      <div class="editform-label">Email</div>
-      <input type="text" class="editform-edit emailwidth" formControlName="email">
-    </div>
-    <div class="editform-row">
-      <div class="editform-label">Telefonszám</div>
-      <input type="text" class="editform-edit em10width" formControlName="telefonszam">
+    <div class="editform-card">
+      <div class="editform-row">
+        <div class="editform-label">Név</div>
+        <input type="text" class="editform-edit ugyfelwidth" appAutofocus formControlName="nev">
+      </div>
+      <div class="editform-row">
+        <div class="editform-label">Telepítési cím</div>
+        <input type="text" class="editform-edit cimwidth" formControlName="cim">
+      </div>
+      <div class="editform-row">
+        <div class="editform-label">Email</div>
+        <input type="text" class="editform-edit emailwidth" formControlName="email">
+      </div>
+      <div class="editform-row">
+        <div class="editform-label">Telefonszám</div>
+        <input type="text" class="editform-edit em10width" formControlName="telefonszam">
+      </div>
     </div>
 
-    <div class="editform-row">
+    <div class="editform-card">
+      <div class="editform-row">
+        <div class="editform-label">Inverter</div>
+        <input type="text" class="editform-edit em20width" formControlName="inverter">
+      </div>
+      <div class="editform-row">
+        <div class="editform-label">Napelem</div>
+        <input type="text" class="editform-edit em20width" formControlName="napelem">
+      </div>
+    </div>
+
+    <div class="editform-row-bottom">
       <div class="editform-label">Hiba</div>
-      <textarea rows="3" class="editform-text cimwidth" formControlName="megjegyzes"></textarea>
+      <textarea rows="3" class="editform-text" style="width: 50em" formControlName="megjegyzes"></textarea>
     </div>
 
     <div class="editform-row-bottom">
