--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
-  <h5>{{dokumentumservice.cim}}</h5>
+  <h5>{{cim}}</h5>
   <button (click)="onKereses()" class="toolbutton">
     <i class="fa fa-search" aria-hidden="true"></i>
   </button>
