dinamikus pélányosítás: app-projekt-telepitesi-dokumentumok-kivalasztasa

--- a/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
+++ b/src/app/hibabejelentes/hibabejelentes-list/hibabejelentes-list.component.html
@@ -140,6 +140,11 @@
                                                   (eventSzerkeszteskesz)="onModositaskesz($event)">
         </app-telepitesi-dokumentumok-kivalasztasa>
       </ng-container>
+
+      <ng-container *ngIf="egymode === 48">
+        <app-projekt-telepitesi-dokumentumok-kivalasztasa>
+        </app-projekt-telepitesi-dokumentumok-kivalasztasa>
+      </ng-container>
     </div>
   </ng-template>
 
