cdr + szerelési terv

--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -15,9 +15,7 @@
 
       <div class="editform-row-block">
         <div class="editform-label">Tájolás</div>
-        <input type="text" class="editform-edit em6width" formControlName="tajolas"
-               maxlength="20" required autocomplete="off"
-               [(ngModel)]="AjanlatParam.Tajolas" name="tajolas">
+        <input type="text" class="editform-edit em6width" formControlName="tajolas">
       </div>
 
       <div class="editform-row-block">
